fix(nav): correct the URL variable on the Buy Ticket button

--- a/src/app/top-menu/top-menu.component.html
+++ b/src/app/top-menu/top-menu.component.html
@@ -31,7 +31,7 @@
         </div>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" [href]="(siteConfig | async)?.speakerURL" target="_blank">Buy Ticket</a>
+        <a class="nav-link" [href]="(siteConfig | async)?.ticketURL" target="_blank">Buy Ticket</a>
       </li>
     </ul>
   </links>
