update(footer): add Women Techmakers link

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -16,6 +16,7 @@
         <ul>
           <li><a [href]="(siteConfig | async)?.groupWebsite" target="_blank">{{ (siteConfig | async)?.groupName || 'GDG City Name' }}</a></li>
           <li><a href="https://developers.google.com/" target="_blank">Google Developers</a></li>
+          <li><a href="https://www.womentechmakers.com/" target="_blank">Women Techmakers</a></li>
         </ul>
       </div>
       <hr class="w-100 clearfix d-sm-none">
