--- a/src/app/admin/tickets/ticket-new/ticket-new.component.html
+++ b/src/app/admin/tickets/ticket-new/ticket-new.component.html
@@ -33,6 +33,8 @@
       </div>
     </form>
     <br><br>
-    <button class="btn btn-primary" (click)="save()">Save Changes</button>
+    <div class="text-center">
+      <button class="btn btn-primary" (click)="save()">Save Changes</button>
+    </div>
   </section>
 </div>
