--- a/src/app/speakers/speaker-edit/speaker-edit.component.html
+++ b/src/app/speakers/speaker-edit/speaker-edit.component.html
@@ -57,6 +57,8 @@
       </div>
     </form>
     <br><br>
-    <button class="btn btn-primary" (click)="updateSpeaker()">Save Changes</button>
+    <div class="text-center">
+      <button class="btn btn-primary" (click)="updateSpeaker()">Save Changes</button>
+    </div>
   </section>
 </div>
