--- a/src/app/speakers/speaker-new/speaker-new.component.html
+++ b/src/app/speakers/speaker-new/speaker-new.component.html
@@ -57,6 +57,8 @@
       </div>
     </form>
     <br><br>
+    <div class="text-center">
     <button class="btn btn-primary" (click)="addSpeaker()">Save Changes</button>
+    </div>
   </section>
 </div>
