--- a/src/app/sponsors/sponsor-new/sponsor-new.component.html
+++ b/src/app/sponsors/sponsor-new/sponsor-new.component.html
@@ -28,6 +28,8 @@
       </div>
     </form>
     <br><br>
-    <button class="btn btn-primary" (click)="save()">Save Changes</button>
+    <div class="text-center">
+      <button class="btn btn-primary" (click)="save()">Save Changes</button>
+    </div>
   </section>
 </div>
