update(footer): fix footer wrap on mobile

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -11,3 +11,8 @@
 .titles {
   text-transform: uppercase;
 }
+
+footer.page-footer .footer-copyright {
+  line-height: normal;
+  padding-top: 10px;
+}
