--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -72,7 +72,7 @@
   <div class="footer-copyright">
     <div class="container-fluid">
       &copy; {{ copyright }} Copyright <a [href]="(siteConfig | async)?.groupWebsite" target="_blank">{{ (siteConfig | async)?.groupName || 'GDG City Name' }}</a>
-      &bull; Based on the <a href="https://github.com/neojato/DeLorean-v2" target="_blank">DeLorean Project</a>
+      <br>Based on the <a href="https://github.com/neojato/DeLorean-v2" target="_blank">DeLorean Project</a>
     </div>
   </div>
   <!--/.Copyright-->
