--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -105,13 +105,14 @@
       </div>
       <div class="col-md-3">
         <a href="https://www.google.com/maps/search/?api=1&query={{ (siteConfig | async)?.venueAddress || '1600 Amphitheatre Pkwy, Mountain View, CA 94043' }}" target="_blank">
-          <div class="card blue-grey lighten-5 text-center z-depth-2" style="height: 300px; line-height: 250px; cursor: pointer;">
+          <div class="card location-card blue-grey lighten-5 text-center z-depth-2">
             <div class="card-body">
-              <p class="col text-center mb-0" style="display: inline-block; vertical-align: middle; line-height: normal;">
+              <p class="col text-center mb-0">
                 <i class="fa fa-map-marker fa-lg"></i><br/>
                 <strong>{{ (siteConfig | async)?.venueName || 'Googleplex' }}</strong><br/>
                 {{ (siteConfig | async)?.venueAddress || '1600 Amphitheatre Pkwy, Mountain View, CA 94043' }}
               </p>
+              <img src="./../../assets/img/marker.png"/>
             </div>
           </div>
         </a>
