--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,6 +44,10 @@ body {
   background-size: cover;
 }
 
+.hm-black-strong .mask, .hm-black-strong .full-bg-img {
+  background-color: rgba(0,0,0,0.5)!important;
+}
+
 .text-center {
   text-align: center!important;
 }
