--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -23,3 +23,10 @@
   z-index: 1;
   opacity: 0.2;
 }
+
+@media screen and (max-width: 768px) {
+  .location-card .card-body img {
+    left: 24%;
+    top: 20%;
+  }
+}
