--- a/src/app/top-menu/top-menu.component.html
+++ b/src/app/top-menu/top-menu.component.html
@@ -1,6 +1,6 @@
 <!--Navbar-->
 <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark elegant-color-dark fixed-top scrolling-navbar">
-  <logo><a class="navbar-brand" routerLink="/home">{{ (siteConfig | async)?.eventName || 'DevFest 2017' }}</a></logo>
+  <logo><a class="navbar-brand" routerLink="/home">{{ (siteConfig | async)?.eventName }}</a></logo>
   <links>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
