--- a/src/app/admin/tickets/ticket-list/ticket-list.component.html
+++ b/src/app/admin/tickets/ticket-list/ticket-list.component.html
@@ -5,7 +5,7 @@
     <h1 class="section-heading">Ticket Config</h1>
     <div class="row">
       <section class="col-md-12">
-        <a class="btn btn-sm btn-success pull-right" routerLink="/tickets/new"><i class="fa fa-plus"></i> Create</a>
+        <a class="btn btn-sm btn-success pull-right" routerLink="/admin/tickets/new"><i class="fa fa-plus"></i> Create</a>
         <table class="table table-sm table-hover">
           <thead class="blue-grey lighten-4">
             <tr>
@@ -23,7 +23,7 @@
               <td>{{ ticket.price | currency:'USD':true }}</td>
               <td>{{ ticket.active }}</td>
               <td>
-                <a class="btn btn-sm btn-primary" routerLink="/tickets/{{ ticket.$key }}/edit"><i class="fa fa-edit"></i> Edit</a>
+                <a class="btn btn-sm btn-primary" routerLink="/admin/tickets/{{ ticket.$key }}/edit"><i class="fa fa-edit"></i> Edit</a>
                 <a class="btn btn-sm btn-danger" (click)="delete(ticket.$key)"><i class="fa fa-trash"></i> Delete</a>
               </td>
             </tr>
