update(home): bring back the About text from DeLorean v1

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,18 +32,20 @@
 
 <div class="container">
   <div class="divider-new pt-5">
-    <h2 class="h2-responsive">About us</h2>
+    <h2 class="h2-responsive">About</h2>
   </div>
 
   <!--Section: About-->
   <section id="about" class="text-center">
     <p>
-      {{ (siteConfig | async)?.eventName }} is a 100% community organized developer conference with industry experts<br/>
-      presenting on exciting topics including mobile, web, cloud, virtual reality, machine learning, and much more!
+      <strong>Google Developer Group DevFests</strong> are the largest Google related events in the world! Each DevFest is carefully
+      crafted for you by your local GDG community to bring in awesome speakers, great topics, and lots fun! While no two events
+      will be exactly alike, each GDG DevFest will, at its core, be powered by a shared belief that when developers come together
+      to exchange ideas, amazing things&nbsp;can&nbsp;happen!
     </p>
     <p>
-      A full-day conference featuring awesome world-class speakers from technology leaders<br/>
-      within the community as well as Google product team&nbsp;developers.
+      <strong>{{ (siteConfig | async)?.eventName }}</strong> is a 100% community organized full-day developer conference featuring awesome
+      world-class speakers from technology leaders within the community as well as Google product team&nbsp;developers.
     </p>
   </section>
   <!--Section: About-->
