update(sessions): include class to hide topMenu, footer, & schedule header when printing

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <!--Footer-->
-<footer class="page-footer center-on-small-only elegant-color-dark">
+<footer class="page-footer center-on-small-only elegant-color-dark d-print-none">
 
   <!--Footer Links-->
   <div class="container-fluid">
