--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -1,27 +1,30 @@
 <top-menu></top-menu>
 
 <div class="container">
-  <section class="section">
+  <section class="section" style="padding-bottom: 45px;">
     <h1 class="section-heading">Users</h1>
     <div class="row">
       <section class="col-md-12">
-        <table class="table table-sm table-hover">
+        <table class="table table-sm table-hover table-bordered">
           <thead class="blue-grey lighten-4">
             <tr>
               <th class="text-center">#</th>
               <th>Display Name</th>
               <th>Email</th>
               <th>Is Admin?</th>
-              <th>Actions</th>
+              <th style="width: 20%;">Actions</th>
             </tr>
           </thead>
-          <tbody class="user-list">
+          <tbody>
             <tr *ngFor="let user of (users | async); let i = index;">
               <th class="text-center">{{ i+1 }}</th>
               <td>{{ user.displayName }}</td>
               <td>{{ user.email }}</td>
               <td>{{ isAdmin(user.$key) || 'false' }}</td>
               <td><button class="btn btn-sm btn-primary" (click)="updateUser(user.$key)"><i class="fa fa-refresh"></i> Toggle Access</button></td>
+            </tr>
+            <tr>
+              <td colspan="100%;"></td>
             </tr>
           </tbody>
         </table>
