--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -23,7 +23,7 @@
         <h5 class="title font-bold mt-3 mb-4">Contact</h5>
         <ul>
           <li><a href="mailto:{{ (siteConfig | async)?.eventEmail }}" target="_blank">{{ (siteConfig | async)?.eventEmail }}</a></li>
-          <li *ngIf="(siteConfig | async)?.eventTwitter"><a href="https://twitter.com/intent/tweet?text=Join%20me%20at%20@{{ (siteConfig | async)?.eventTwitter }}!%20{{ '%23'+(siteConfig | async)?.eventHashtag }}%20{{ (siteConfig | async)?.eventLink }}" target="_blank">@{{ (siteConfig | async)?.eventTwitter }}</a></li>
+          <li *ngIf="(siteConfig | async)?.eventTwitter"><a href="https://twitter.com/intent/tweet?text=@{{ (siteConfig | async)?.eventTwitter }}" target="_blank">@{{ (siteConfig | async)?.eventTwitter }}</a></li>
           <li *ngIf="(siteConfig | async)?.twitterLink"><a href="https://twitter.com/intent/tweet?text=@{{ (siteConfig | async)?.twitterLink }}" target="_blank">@{{ (siteConfig | async)?.twitterLink }}</a></li>
         </ul>
       </div>
