--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -59,11 +59,11 @@
   <!--Social buttons-->
   <div class="social-section mb-3">
     <ul>
-      <li><a class="btn-social-all" href="https://plus.google.com/{{ (siteConfig | async)?.googleLink || '+GoogleDevelopers' }}" title="Google+" target="_blank"><i class="fa fa-google-plus"></i></a></li>
-      <li><a class="btn-social-all" href="https://www.facebook.com/{{ (siteConfig | async)?.facebookLink || 'Google-Developers-967415219957038/' }}" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a></li>
-      <li><a class="btn-social-all" href="https://twitter.com/{{ (siteConfig | async)?.twitterLink || 'gdg' }}" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a></li>
-      <li><a class="btn-social-all" href="https://www.meetup.com/{{ (siteConfig | async)?.meetupLink || 'pro/gdg/' }}" title="Meetup" target="_blank"><i class="fa fa-meetup"></i></a></li>
-      <li><a class="btn-social-all" href="https://github.com/{{ (siteConfig | async)?.githubLink || 'neojato/DeLorean-v2' }}" title="GitHub" target="_blank"><i class="fa fa-github"></i></a></li>
+      <li *ngIf="(siteConfig | async)?.googleLink"><a class="btn-social-all" href="https://plus.google.com/{{ (siteConfig | async)?.googleLink }}" title="Google+" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+      <li *ngIf="(siteConfig | async)?.facebookLink"><a class="btn-social-all" href="https://www.facebook.com/{{ (siteConfig | async)?.facebookLink }}" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a></li>
+      <li *ngIf="(siteConfig | async)?.twitterLink"><a class="btn-social-all" href="https://twitter.com/{{ (siteConfig | async)?.twitterLink }}" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a></li>
+      <li *ngIf="(siteConfig | async)?.meetupLink"><a class="btn-social-all" href="https://www.meetup.com/{{ (siteConfig | async)?.meetupLink }}" title="Meetup" target="_blank"><i class="fa fa-meetup"></i></a></li>
+      <li *ngIf="(siteConfig | async)?.githubLink"><a class="btn-social-all" href="https://github.com/{{ (siteConfig | async)?.githubLink }}" title="GitHub" target="_blank"><i class="fa fa-github"></i></a></li>
     </ul>
   </div>
   <!--/.Social buttons-->
