--- a/src/app/admin/tickets/ticket-list/ticket-list.component.html
+++ b/src/app/admin/tickets/ticket-list/ticket-list.component.html
@@ -1,5 +1,6 @@
 <top-menu></top-menu>
 
+<div class="between-sections"><br><br></div>
 <div class="container">
   <section class="section" style="padding-bottom: 45px;">
     <h1 class="section-heading">Ticket Config</h1>
@@ -33,3 +34,4 @@
     </div>
   </section>
 </div>
+<div class="between-sections"><br><br></div>
