--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -1,5 +1,6 @@
 <top-menu></top-menu>
 
+<div class="between-sections"><br><br></div>
 <div class="container">
   <section class="section" style="padding-bottom: 45px;">
     <h1 class="section-heading">Users</h1>
@@ -43,3 +44,4 @@
     </div>
   </section>
 </div>
+<div class="between-sections"><br><br></div>
