--- a/src/app/admin/site-config/site-config.component.html
+++ b/src/app/admin/site-config/site-config.component.html
@@ -118,8 +118,13 @@
           </div>
           <div class="md-form">
             <i class="fa fa-ticket prefix grey-text"></i>
-            <input type="text" [(ngModel)]="siteConfig.ticketURL" name="ticketURL" id="ticketURL" class="form-control">
-            <label for="ticketURL" [class.active]="siteConfig.ticketURL && siteConfig.ticketURL.length > 0">Ticket Purchase URL:</label>
+            <input type="text" [(ngModel)]="siteConfig.ticketURL" name="ticketURL" #ticketURL="ngModel" id="ticketURL" class="form-control" required>
+            <label for="ticketURL" [class.active]="siteConfig.ticketURL && siteConfig.ticketURL.length > 0">Purchase Ticket URL:</label>
+            <div *ngIf="ticketURL.invalid && (ticketURL.dirty || ticketURL.touched)" class="text-danger">
+              <div *ngIf="ticketURL.errors.required">
+                DevFest Ticket URL is required.
+              </div>
+            </div>
           </div>
           <div class="md-form">
             <i class="fa fa-usd prefix grey-text"></i>
